--- a/matting/index.html
+++ b/matting/index.html
@@ -20,6 +20,6 @@
 <canvas id="canvas">
     您的浏览器不支持canvas
 </canvas>
-<script src="js/index.js"></script>
+<script src="src/index.js"></script>
 </body>
 </html>
