--- a/three/three_4/index.html
+++ b/three/three_4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>百度前端学院——WebGL No. 2 - 光与影</title>
+    <title>百度前端学院——WebGL No. 4 - 照相机和交互控制</title>
 </head>
 <body onload="init()">
 <div id="container"></div>
