--- a/three/three_1/index.html
+++ b/three/three_1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>百度前端学院——WebGL No. 2 - 光与影</title>
+    <title>百度前端学院——Three.js 入门</title>
 </head>
 <body onload="init()">
 <canvas id="canvas" width="500" height="500"></canvas>
